# simple_lexical_scanner

./: .gitignore  CMakeLists.txt  ScannerTests.cpp  scanner.cpp  scanner.h  scanner_tests.cpp
